Fix Hudi query runners